980 Responsive working for index and contact

--- a/index.html
+++ b/index.html
@@ -3,29 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Shianne Taylor</title>
 </head>
 
 <body>    
     <div class="wrapper">
-    <header class="clearfix">
-        <div class="container">
-            <h1>Shianne</h1>
-            <nav>
-                <a href="index.html">About</a> |
-                <a href="portfolio.html">Portfolio</a> |
-                <a href="contact.html">Contact</a>
-            </nav>
-        </div>
-    </header>
+        <header>
+            <div class="navbar">
+                <h1>Shianne</h1>
+                <nav>
+                    <a href="index.html">About</a> |
+                    <a href="portfolio.html">Portfolio</a> |
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
+        </header>
+        <div class="clearfix"></div>
 
     <div class="container">
         <section id="content" class="clearfix">
             <h2>About Me</h2>
             <hr>
             <img id="bio-image" src="assets/images/me.jpg" alt="Shianne holding an alligator">
-
+        <div class="bio-text">
             <p>Hello! Welcome to my portfolio. My name is Shianne Taylor and I'm from Pleasant Grove, Utah.
             I've been doing Technical Support for about three years, and I am ready for something more challenging.</p>
             
@@ -40,15 +42,16 @@
             We'll be celebrating our twelth wedding anniversary in April 2020! No kids, but we do have three cats. Dotty, Loki, and Pumpkin.</p>
         
             <p>In my free time I enjoy spending time with my husband, watching shows, playing video games and board games.</p>
-        </section>    
+        </div>
+        </section>           
     </div>    
         <div class="push"></div>
-    </div>
 
+    </div>
 <div class="footer"> 
-    <footer>
-        <p style="text-align:center">Copyright ©</p>
-    </footer>
+<footer>
+    <p style="text-align:center">Copyright ©</p>
+</footer>
 </div>
 
 </body>
