--- a/portfolio.html
+++ b/portfolio.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/portfolio.css">
     <title>Shianne Taylor - Portfolio</title>
 </head>
 
-<body>
+<body>    
     <div class="wrapper">
-    <header class="clearfix">
-        <div class="container">
-            <h1>Shianne</h1>
-            <nav>
-                <a href="index.html">About</a> |
-                <a href="portfolio.html">Portfolio</a> |
-                <a href="contact.html">Contact</a>
-            </nav>
-        </div>
-    </header>
+        <header>
+            <div class="navbar">
+                <h1>Shianne</h1>
+                <nav>
+                    <a href="index.html">About</a> |
+                    <a href="portfolio.html">Portfolio</a> |
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
+        </header>
+        <div class="clearfix"></div>
 
     <div class="container">
         <section id="content" class="clearfix">
